force-app/main/default/objects/Investigation__c/Investigation__c.object-meta.xml
<CustomObject>
    <label>Investigation</label>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>Investigation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investigations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>