force-app/main/default/objects/Investigation__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Investigations</relationshipLabel>
    <relationshipName>Investigations</relationshipName>
    <type>Lookup</type>
</CustomField>