force-app/main/default/objects/Investigation__c/fields/Investigation_Status__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Status__c</fullName>
    <label>Investigation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Assigned to Field Agent</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>