force-app/main/default/objects/Investigation__c/fields/ReportedBy__c.field-meta.xml
<CustomField>
    <fullName>ReportedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reported By</label>
    <referenceTo>Employee</referenceTo>
    <relationshipLabel>Investigations</relationshipLabel>
    <relationshipName>Investigations</relationshipName>
    <type>Lookup</type>
</CustomField>