force-app/main/default/objects/Investigation__c/fields/What_did_you_say_in_response__c.field-meta.xml
<CustomField>
    <fullName>What_did_you_say_in_response__c</fullName>
    <label>What did you say in response?</label>
    <type>TextArea</type>
</CustomField>