force-app/main/default/objects/Investigation__c/fields/What_happened__c.field-meta.xml
<CustomField>
    <fullName>What_happened__c</fullName>
    <label>What happened?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>