force-app/main/default/objects/Investigation__c/fields/Where_did_the_incident_happen__c.field-meta.xml
<CustomField>
    <fullName>Where_did_the_incident_happen__c</fullName>
    <label>Where did the incident happen?</label>
    <length>55</length>
    <type>Text</type>
</CustomField>