force-app/main/default/objects/Investigation__c/fields/Witness_information__c.field-meta.xml
<CustomField>
    <fullName>Witness_information__c</fullName>
    <label>Witness information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>